crates/ferrum-interfaces/tests/ui/vnext/fail/unvalidated_prepared_family_is_not_deserialize.rs
use ferrum_interfaces::vnext::UnvalidatedPreparedModelFamily;

fn main() {
    let _: UnvalidatedPreparedModelFamily = serde_json::from_str("{}").unwrap();
}
